--- a/views/products-error.ejs
+++ b/views/products-error.ejs
@@ -6,7 +6,7 @@
 			<br />
 			<h3 style="color: blue"><%= error %></h3>
       <br/>   
-      <a href='/api/products/form' class="btn btn-primary mt-3 mb-0">Go to Product List</a>
+      <a href='/api/products/form' class="btn btn-primary mt-3 mb-0">Go to Product Form</a>
 		</div>
 	</div>
 </body>
